force-app/main/default/objects/Project__c/fields/test3__c.field-meta.xml
<CustomField>
    <fullName>test3__c</fullName>
    <label>test3</label>
    <length>250</length>
    <type>Text</type>
</CustomField>