force-app/main/default/objects/Project__c/fields/Test_field1__c.field-meta.xml
<CustomField>
    <fullName>Test_field1__c</fullName>
    <label>Test field1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>