force-app/main/default/objects/Project__c/fields/test_field__c.field-meta.xml
<CustomField>
    <fullName>test_field__c</fullName>
    <label>test field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>